# synergy

./: CMakeLists.txt  genkey.sh
ext/openssl-win32/include/openssl/: opensslconf.h
ext/openssl-win32/lib/: ssleay32.lib
ext/openssl-win64/include/openssl/: opensslconf.h
ext/openssl-win64/lib/: ssleay32.lib
ext/toolchain/: commands1.py  generators.py
src/: CMakeLists.txt
src/cmd/synergyc/: CMakeLists.txt
src/cmd/synergyd/: CMakeLists.txt
src/cmd/synergyp/: CMakeLists.txt
src/cmd/synergys/: CMakeLists.txt
src/cmd/syntool/: CMakeLists.txt
src/cmd/usynergy/: CMakeLists.txt
src/gui/: gui.pro
src/gui/src/: MainWindow.cpp  MainWindow.h  Plugin.cpp  SettingsDialog.cpp  ZeroconfService.h
src/lib/arch/: CMakeLists.txt  multibyte.h
src/lib/arch/mingw/: UserEnv.h  VersionHelpers.h  WinInet.h  WtsApi32.h
src/lib/arch/unix/: ArchFileUnix.cpp
src/lib/arch/win32/: ArchFileWindows.cpp  ArchInternetWindows.cpp  ArchMiscWindows.cpp  ArchMiscWindows.h  ArchSystemWindows.cpp  ArchTaskBarWindows.cpp  ArchTimeWindows.cpp  XArchWindows.h
src/lib/base/: CMakeLists.txt  EventQueue.cpp
src/lib/client/: CMakeLists.txt
src/lib/common/: common.h
src/lib/ipc/: CMakeLists.txt
src/lib/mt/: CMakeLists.txt
src/lib/net/: CMakeLists.txt
src/lib/platform/: CMakeLists.txt  MSWindowsClipboardBitmapConverter.cpp  MSWindowsDropTarget.cpp  MSWindowsKeyState.cpp  MSWindowsScreen.cpp  MSWindowsSession.cpp  MSWindowsSession.h  MSWindowsWatchdog.cpp
src/lib/plugin/ns/: CMakeLists.txt
src/lib/plugin/winmmjoy/: CMakeLists.txt  winmmjoy.cpp
src/lib/server/: CMakeLists.txt
src/lib/synergy/: App.cpp  CMakeLists.txt  ClientApp.cpp  DaemonApp.cpp  ServerApp.cpp  SubscriptionManager.h
src/lib/synwinhk/: CMakeLists.txt
win32_bin/SSL/: Synergy.pem
win32_bin/SSL/Fingerprints/: TrustedServers.txt
